--- a/cola_algs/cola_fln.yaml
+++ b/cola_algs/cola_fln.yaml
@@ -4,6 +4,14 @@ image: mosaicml/pytorch_internal:moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git # Name of the git repo to clone - can be full URL or path under github.com
 git_branch: moin/act # Name of the git branch/tag/commit to use
 command: >-
+  git clone https://github.com/moinnadeem/apex /root/apex
+
+  cd /root/apex
+
+  pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
+
+  pip install --user -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
+
   git clone {{ git_repo }} /root/composer
 
   cd /root/composer
@@ -13,14 +21,6 @@ command: >-
   git checkout {{ git_branch }}
 
   pip install --user -e ".[all]"
-
-  git clone https://github.com/moinnadeem/apex /root/apex
-
-  cd /root/apex
-
-  pip install --user -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
-
-  cd /root/composer
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml
