--- a/cola_algs/cola_gegelu_fused.yaml
+++ b/cola_algs/cola_gegelu_fused.yaml
@@ -4,6 +4,18 @@ image: mosaicml/pytorch_internal:moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git # Name of the git repo to clone - can be full URL or path under github.com
 git_branch: moin/act # Name of the git branch/tag/commit to use
 command: >-
+  python3.8 -m venv env
+
+  source env/bin/activate
+
+  git clone https://github.com/moinnadeem/apex /root/apex
+
+  cd /root/apex
+
+  pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
+
+  pip install -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
+
   git clone {{ git_repo }} /root/composer
 
   cd /root/composer
@@ -12,19 +24,7 @@ command: >-
 
   git checkout {{ git_branch }}
 
-  pip install --user -e ".[all]"
-
-  pip uninstall torch
-
-  pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu113
-
-  git clone https://github.com/moinnadeem/apex /root/apex
-
-  cd /root/apex
-
-  pip install --user -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
-
-  cd /root/composer
+  pip install -e ".[all]"
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml
@@ -38,9 +38,9 @@ parameters:  # Any parameter overrides you want to use IN EVERY RUN should be sp
   _n_gpus: 1
   algorithms:
     act_fn_search:
-      use_gated: true 
+      use_gated: true
       use_rmsnorm: false
-      use_fln: false 
+      use_fln: true
       act_fn_name: gelu 
 grid:  # Any parameter overrides you want to sweep over should be specified here. Use "dot-syntax" to recurse into the nested parameters
   optimizer.decoupled_adamw.lr:
@@ -52,15 +52,15 @@ grid:  # Any parameter overrides you want to sweep over should be specified here
   train_batch_size:
     - 32
   load_path_format:
-    # GEGELU
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it3500_2363.tar
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it14000_9449.tar
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it24500_16528.tar
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it35000_23615.tar
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it45500_30727.tar
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it56000_37832.tar
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it66500_44983.tar
-    - https://storage.googleapis.com/bert_checkpoints/bert_gelu_gated/rank_0/bert_checkpoints/it68796_46541.tar
+    # GEGELU + Fused
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it3500_1957.tar
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it14000_7746.tar
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it24500_13524.tar
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it35000_19298.tar
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it45500_25072.tar
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it56000_30847.tar
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it66500_36619.tar
+    - https://storage.googleapis.com/bert_checkpoints/bert_gegelu_fused/rank_0/bert_checkpoints/it68796_37886.tar
   seed:
     - 1
     - 2
