--- a/fused_ln/apex_ln.yaml
+++ b/fused_ln/apex_ln.yaml
@@ -1,19 +1,13 @@
 name: bert-fused-layernorm # Name of the sweep - it'll be used in run names
 project: bert-fused-layernorm # Name of the Weights and Biases project to use
-image: mosaicml/pytorch:1.11.0_cu113-python3.9-ubuntu20.04 # Name of the docker image to use
+image: mosaicml/moin:latest # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git # Name of the git repo to clone - can be full URL or path under github.com
 git_branch: moin/act # Name of the git branch/tag/commit to use
 command: >-
   git clone {{ git_repo }} /root/composer
 
   cd /root/composer
-
-  echo 'Checking out composer branch {{ git_branch }}'
-
-  git checkout {{ git_branch }}
-
-  pip install --user -e ".[all]"
-
+ 
   git clone https://github.com/moinnadeem/apex /root/apex
 
   cd /root/apex
@@ -22,16 +16,25 @@ command: >-
 
   cd /root/composer
   
-  pip install xformers
+  pip install xformers triton
+
+  echo 'Checking out composer branch {{ git_branch }}'
+
+  git checkout {{ git_branch }}
+
+  pip install --user -e ".[all]"
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml
 
-instance: a2-highgpu-8g-a100-8 # Name of the instance you want to run on, e.g. r1z1-g8-a100
+instance: p4d.24xlarge # Name of the instance you want to run on, e.g. r1z1-g8-a100
 run_type: convergence  # Type of run you want to perform (convergence is default and only one support currently)
-models: bert_base-layernorms # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
+algorithms:
+  - act_fn_search
+models: bert-base_layernorms # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
 parameters:  # Any parameter overrides you want to use IN EVERY RUN should be specified here
   _n_gpus: 8
+  grad_accum: 4
   algorithms:
     act_fn_search:
       use_gated: false
