--- a/fused_ln/triton_ln.yaml
+++ b/fused_ln/triton_ln.yaml
@@ -16,7 +16,7 @@ command: >-
 
   cd /root/composer
   
-  pip install xformers triton
+  pip install xformers
 
   echo 'Checking out composer branch {{ git_branch }}'
 
@@ -24,10 +24,12 @@ command: >-
 
   pip install --user -e ".[all]"
 
+  pip install -U --pre triton
+
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml
 
-instance: p4d.24xlarge # Name of the instance you want to run on, e.g. r1z1-g8-a100
+instance: a2-highgpu-8g-a100-8 # Name of the instance you want to run on, e.g. r1z1-g8-a100
 run_type: convergence  # Type of run you want to perform (convergence is default and only one support currently)
 algorithms:
   - act_fn_search
