--- a/fused_ln/pytorch_ln.yaml
+++ b/fused_ln/pytorch_ln.yaml
@@ -14,7 +14,7 @@ command: >-
 
   pip install --user -v --disable-pip-version-check --no-cache-dir --global-option="--cpp_ext" --global-option="--cuda_ext" ./
 
-  pip install xformers triton
+  pip install xformers
 
   cd /root/composer
   
@@ -26,17 +26,19 @@ command: >-
 
   pip install --user -e ".[all]"
 
+  pip install -U --pre triton
+
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml
 
-instance: a2-highgpu-8g-a100-8 # Name of the instance you want to run on, e.g. r1z1-g8-a100
+instance: r1z1-g8-a100 # Name of the instance you want to run on, e.g. r1z1-g8-a100
 run_type: convergence  # Type of run you want to perform (convergence is default and only one support currently)
 algorithms:
   - act_fn_search
 models: bert-base_layernorms # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
 parameters:  # Any parameter overrides you want to use IN EVERY RUN should be specified here
   _n_gpus: 8
-  grad_accum: 4
+  grad_accum: 1
   algorithms:
     act_fn_search:
       use_gated: false
