--- a/docker/pytorch/Dockerfile
+++ b/docker/pytorch/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update && \
         dirmngr \
         apt-utils \
         gpg-agent \
+        openssh-client \
         # For PILLOW:
         zlib1g-dev \
         libtiff-dev \
@@ -173,6 +174,7 @@ RUN sudo apt-get update && \
     sudo rm -rf /var/lib/apt/lists/*
 
 ARG CUDA_VERSION_TAG
+ARG MMCV_VERSION
 ARG MMCV_TORCH_VERSION
 ARG PYTHON_VERSION
 
@@ -181,5 +183,5 @@ RUN sudo pip${PYTHON_VERSION} install --no-cache-dir \
     'opencv-python>=4.5.5.64,<4.6' \
     'numba>=0.55.0,<0.56' \
     cupy-`echo ${CUDA_VERSION_TAG} | sed "s/cu/cuda/g"`>=10.2.0 && \
-    sudo pip${PYTHON_VERSION} install --no-cache-dir mmcv-full==1.4.4 -f https://download.openmmlab.com/mmcv/dist/${CUDA_VERSION_TAG}/${MMCV_TORCH_VERSION}/index.html && \
+    sudo pip${PYTHON_VERSION} install --no-cache-dir mmcv-full==${MMCV_VERSION} -f https://download.openmmlab.com/mmcv/dist/${CUDA_VERSION_TAG}/${MMCV_TORCH_VERSION}/index.html && \
     sudo pip${PYTHON_VERSION} install --no-cache-dir 'mmsegmentation>=0.22.0,<0.23'
