--- a/composer/yamls/models/glue/cola.yaml
+++ b/composer/yamls/models/glue/cola.yaml
@@ -55,7 +55,9 @@ validate_every_n_batches: 250
 validate_every_n_epochs: 1
 callbacks:
   - lr_monitor: {}
-load_path: https://storage.googleapis.com/llm_checkpoints/bert_checkpoint/bert_checkpoints/ep7.pt
+load_path: https://storage.googleapis.com/bert_checkpoints/bert_baseline/rank_0/bert_checkpoints/it68796_44284.tar 
 load_weights_only: true
 load_strict_model_weights: false
 load_chunk_size: 8192
+loggers:
+  - progress_bar: {}
