--- a/cola_algs/cola_baseline.yaml
+++ b/cola_algs/cola_baseline.yaml
@@ -1,8 +1,8 @@
-name: cola-pareto-curves # Name of the sweep - it'll be used in run names
-project: cola-pareto-curves # Name of the Weights and Biases project to use
+name: cola-baseline # Name of the sweep - it'll be used in run names
+project: cola-baseline # Name of the Weights and Biases project to use
 image: mosaicml/pytorch_internal:moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git # Name of the git repo to clone - can be full URL or path under github.com
-git_branch: moin/act # Name of the git branch/tag/commit to use
+git_branch: moin/cola_sweeps # Name of the git branch/tag/commit to use
 command: >-
   git clone {{ git_repo }} /root/composer
 
@@ -22,6 +22,8 @@ command: >-
 
   cd /root/composer
 
+  pip install -U --pre triton
+
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
   -f /mnt/config/parameters.yaml
 
@@ -33,13 +35,14 @@ parameters:  # Any parameter overrides you want to use IN EVERY RUN should be sp
 grid:  # Any parameter overrides you want to sweep over should be specified here. Use "dot-syntax" to recurse into the nested parameters
   optimizer.decoupled_adamw.lr:
     - 1.0e-5
+    - 2.0e-5
   optimizer.decoupled_adamw.weight_decay:
     - 0.0
   grad_clip_norm:
     - None
   train_batch_size:
     - 32
-  load_path_format:
+  load_path:
     # BASELINE
     - https://storage.googleapis.com/bert_checkpoints/bert_baseline/rank_0/bert_checkpoints/it3500_2248.tar
     - https://storage.googleapis.com/bert_checkpoints/bert_baseline/rank_0/bert_checkpoints/it14000_8977.tar
@@ -54,3 +57,8 @@ grid:  # Any parameter overrides you want to sweep over should be specified here
     - 2
     - 3
     - 4
+  max_duration:
+    - 10ep
+    - 20ep
+    - 50ep
+    - 100ep
