--- a/composer/yamls/models/bert-base_streaming.yaml
+++ b/composer/yamls/models/bert-base_streaming.yaml
@@ -1,33 +1,29 @@
 train_dataset:
-  streaming_lm:
-    dataset_name: c4
-    dataset_config_name: en
+  c4:
     split: train
-    max_samples: 275184000 
+    num_samples: 275184000 
+    tokenizer_name: bert-base-uncased
     max_seq_len: 128 
     group_method: truncate # TODO: check that the code for this one is right
-    tokenizer_name: bert-base-uncased
-    use_masked_lm: true # TODO: check that the code for this one is right 
+    mlm: true # TODO: check that the code for this one is right 
     mlm_probability: 0.15
-    seed: 17
     shuffle: true
+    seed: 17
     drop_last: true
 evaluators:
   evaluator:
     label: bert_pre_training
     eval_dataset:
-      streaming_lm:
-        dataset_name: c4
-        dataset_config_name: en
+      c4:
         split: validation
-        max_samples: 32000 # there's a bug, this is currently per-device 
+        num_samples: 32000 # there's a bug, this is currently per-device 
+        tokenizer_name: bert-base-uncased 
         max_seq_len: 128 
         group_method: truncate # TODO: check that the code for this one is right
-        tokenizer_name: bert-base-uncased 
-        use_masked_lm: true # TODO: check that the code for this one is right
+        mlm: true # TODO: check that the code for this one is right
         mlm_probability: 0.15
-        seed: 17
         shuffle: false
+        seed: 17
         drop_last: true
     metric_names:
       - LanguageCrossEntropy
@@ -50,12 +46,6 @@ schedulers:
       t_warmup: 0.06dur
 loggers:
   - progress_bar: {}
-  - file:
-      log_level: batch 
-      filename: stdout
-      buffer_size: 1
-      flush_interval: 100
-      log_interval: 100
 max_duration: 1ep  # Baseline is 256M samples, 7 epochs is ~280M samples
 log_level: INFO 
 train_batch_size: 4000
@@ -75,4 +65,4 @@ grad_clip_norm: None
 validate_every_n_batches: 1000
 validate_every_n_epochs: 1
 save_folder: bert_checkpoints
-save_interval: "1ep"
+save_interval: 3500ba 
