--- a/composer/yamls/models/bert-base_streaming.yaml
+++ b/composer/yamls/models/bert-base_streaming.yaml
@@ -50,8 +50,8 @@ loggers:
       object_store_hparams:
         provider: GOOGLE_STORAGE
         container: moin_bert_checkpoints
-        key_environ: GCE_KEY
-        secret_environ: GCE_SECRET
+        key_environ: GCS_KEY
+        secret_environ: GCS_SECRET
 max_duration: 1ep  # Baseline is 256M samples, 7 epochs is ~280M samples
 train_batch_size: 4000
 eval_batch_size: 2000
