--- a/composer/yamls/models/bert-base_streaming.yaml
+++ b/composer/yamls/models/bert-base_streaming.yaml
@@ -65,12 +65,9 @@ dataloader:
   timeout: 0
   prefetch_factor: 2
 grad_accum: 8
-precision: fp16 
+precision: amp
 grad_clip_norm: None
 validate_every_n_batches: 1000
 validate_every_n_epochs: 1
 save_folder: bert_checkpoints
-save_interval: 50ba
-deepspeed:
-  zero_optimization:
-    stage: 1
+save_interval: 3500ba
