--- a/data_collection_yamls/oom_test.yaml
+++ b/data_collection_yamls/oom_test.yaml
@@ -3,7 +3,7 @@ name: bert-pareto-curves  # Name of the sweep - it'll be used in run names
 project: bert-pareto-curves  # Name of the Weights and Biases project to use
 image: mosaicml/pytorch_internal:moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git  # Name of the git repo to clone - can be full URL or path under github.com
-git_branch: moin/cleaned_gated  # Name of the git branch/tag/commit to use
+git_branch: moin/debugging_ooms  # Name of the git branch/tag/commit to use
 command: >-
   git clone https://github.com/moinnadeem/apex /root/apex
 
@@ -33,7 +33,7 @@ algorithms:
   - act_fn_search
 models: bert-base_streaming  # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
 parameters:  # Any parameter overrides you want to use IN EVERY RUN should be specified here
-  run_name: bert-deepspeed
+  run_name: bert-oom-test
   _n_gpus: 8
   grad_accum: 1
   algorithms:
@@ -43,8 +43,4 @@ parameters:  # Any parameter overrides you want to use IN EVERY RUN should be sp
       use_fln: false
       use_triton: false
       act_fn_name: no_replacement
-  precision: fp16
-  deepspeed:
-    zero_optimization:
-      stage: 1
-named_like: bert-deepspeed
+named_like: bert-oom-test
