--- a/data_collection_yamls/deepspeed.yaml
+++ b/data_collection_yamls/deepspeed.yaml
@@ -26,7 +26,7 @@ command: >-
   pip install --user -e ".[all]"
 
   composer -n {{ parameters['_n_gpus'] }} examples/run_composer_trainer.py
-  -f /mnt/config/parameters.yaml
+  -f /mnt/config/parameters.yaml --run_name $(WANDB_NAME)
 instance: r1z1-g8-a100  # Name of the instance you want to run on, e.g. r1z1-g8-a100
 run_type: convergence  # Type of run you want to perform (convergence is default and only one support currently)
 algorithms:
