adding a min lr

--- a/composer/yamls/models/bert-base_streaming.yaml
+++ b/composer/yamls/models/bert-base_streaming.yaml
@@ -48,6 +48,7 @@ optimizer:
 schedulers:
   - linear_decay_with_warmup:
       t_warmup: 0.06dur
+      alpha_f: 0.02
 loggers:
   - progress_bar: {}
   - wandb: {}
