changing evaluators to be callbacks so I can register them as metics

--- a/composer/yamls/models/cola.yaml
+++ b/composer/yamls/models/cola.yaml
@@ -19,6 +19,8 @@ evaluators:
           drop_last: false
       metric_names:
         - MatthewsCorrCoef
+      summary:
+        - max
 model:
   bert_classification:
     num_labels: 2
