--- a/composer/yamls/models/qnli.yaml
+++ b/composer/yamls/models/qnli.yaml
@@ -19,6 +19,8 @@ evaluators:
           drop_last: false
       metric_names:
         - Accuracy
+      summary:
+        - max
 model:
   bert_classification:
     num_labels: 2
