--- a/composer/yamls/models/rte.yaml
+++ b/composer/yamls/models/rte.yaml
@@ -29,19 +29,19 @@ model:
     pretrained_model_name: bert-base-uncased
 optimizer:
   decoupled_adamw:
-    lr: 1.0e-5
+    lr: 1.0e-4
     betas:
       - 0.9
       - 0.98
     eps: 1.0e-06
-    weight_decay: 1.0e-5
+    weight_decay: 0.0
 schedulers:
   - linear_decay_with_warmup:
       t_warmup: 0.06dur
 loggers:
   - progress_bar: {}
   - wandb: {}
-max_duration: 3ep
+max_duration: 75ep
 train_batch_size: 16
 eval_batch_size: 16
 seed: 19
@@ -60,7 +60,7 @@ validate_every_n_batches: 1000
 validate_every_n_epochs: 1
 callbacks:
   - lr_monitor: {}
-load_path: https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep1-ba68796-rank0-wct38583/checkpoints/ep5-ba40910-rank0-wct5362 
+load_path: https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep1-ba68796-rank0-wct38583/checkpoints/ep5-ba40910-rank0-wct5362
 load_weights_only: true
 load_strict_model_weights: false
 load_chunk_size: 8192
