--- a/glue_data_collection_yamls/rte/fln.yaml
+++ b/glue_data_collection_yamls/rte/fln.yaml
@@ -1,6 +1,6 @@
 ---
-name: mnli-pareto-curves  # Name of the sweep - it'll be used in run names
-project: mnli-pareto-curves  # Name of the Weights and Biases project to use
+name: rte-pareto-curves  # Name of the sweep - it'll be used in run names
+project: rte-pareto-curves  # Name of the Weights and Biases project to use
 image: mosaicml/moin  # Name of the docker image to use
 git_repo: https://github.com/moinnadeem/composer.git  # Name of the git repo to clone - can be full URL or path under github.com
 git_branch: moin/cleaned_gated  # Name of the git branch/tag/commit to use
@@ -27,9 +27,9 @@ instance: r1z1-g1-a100  # Name of the instance you want to run on, e.g. r1z1-g8-
 run_type: convergence  # Type of run you want to perform (convergence is default and only one support currently)
 algorithms:
   - act_fn_search
-models: mnli  # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
+models: rte  # The name of the model you want to use - should match the name of a YAML file in your local composer "models" directory unless you are fully specifying model parameters in the `parameters` section
 parameters:  # Any parameter overrides you want to use IN EVERY RUN should be specified here
-  run_name: mnli-fln
+  run_name: rte-fln
   _n_gpus: 1
   grad_accum: 1
   algorithms:
@@ -39,14 +39,17 @@ parameters:  # Any parameter overrides you want to use IN EVERY RUN should be sp
       use_fln: true
       use_triton: false
       act_fn_name: no_replacement
-named_like: moin-bert-fln
+named_like: moin-rte-fln
 grid:
+  seed:
+    - 1
+    - 2
   load_path:
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep0-ba3500-rank0-wct1815
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep0-ba14000-rank0-wct7228
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep0-ba24500-rank0-wct12679
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep0-ba35000-rank0-wct18076
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep0-ba45500-rank0-wct23367
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep0-ba56000-rank0-wct28684
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep0-ba66500-rank0-wct33994
-    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-fln/checkpoints/ep1-ba68796-rank0-wct35155
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep0-ba3500-rank0-wct2041/checkpoints/ep5-ba40910-rank0-wct5376
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep0-ba14000-rank0-wct8034/checkpoints/ep5-ba40910-rank0-wct5331
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep0-ba24500-rank0-wct13954/checkpoints/ep5-ba40910-rank0-wct5227
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep0-ba35000-rank0-wct19812/checkpoints/ep5-ba40910-rank0-wct5194
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep0-ba45500-rank0-wct25636/checkpoints/ep5-ba40910-rank0-wct5392
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep0-ba56000-rank0-wct31470/checkpoints/ep5-ba40910-rank0-wct5367
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep0-ba66500-rank0-wct37312/checkpoints/ep5-ba40910-rank0-wct5347
+    - https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/ep1-ba68796-rank0-wct38583/checkpoints/ep5-ba40910-rank0-wct5362
