swapping GLUE to moin_glue

--- a/composer/yamls/models/mnli.yaml
+++ b/composer/yamls/models/mnli.yaml
@@ -74,13 +74,14 @@ dataloader:
   timeout: 0
   prefetch_factor: 2
 grad_accum: 1
-precision: amp
+precision: fp16 
+deepspeed: {}
 grad_clip_norm: None
 validate_every_n_batches: 2300
 validate_every_n_epochs: 1
 callbacks:
   - lr_monitor: {}
-load_path: https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-baseline/checkpoints/ep0-ba3500-rank0-wct2041 
+load_path: https://storage.googleapis.com/moin_bert_checkpoints/moin-bert-deepspeed/ep1-ba68796-rank0-wct33326.tar/checkpoints/ep5-ba40910-rank0-wct4970.tar 
 load_weights_only: true
 load_strict_model_weights: false
 load_chunk_size: 8192
