--- a/composer/yamls/models/bert-base_streaming.yaml
+++ b/composer/yamls/models/bert-base_streaming.yaml
@@ -20,11 +20,11 @@ evaluators:
         dataset_name: c4
         dataset_config_name: en
         split: validation
-        max_samples: 32000 # there's a bug, this is currently per-device
+        max_samples: 32000
         max_seq_len: 128
-        group_method: truncate # TODO: check that the code for this one is right
+        group_method: truncate
         tokenizer_name: bert-base-uncased
-        use_masked_lm: true # TODO: check that the code for this one is right
+        use_masked_lm: true
         mlm_probability: 0.15
         seed: 17
         shuffle: false
@@ -73,7 +73,6 @@ dataloader:
 grad_accum: 1
 precision: amp
 grad_clip_norm: None
-validate_every_n_batches: 1000
-validate_every_n_epochs: 1
+eval_interval: 3500ba
 save_folder: bert_checkpoints
 save_interval: 3500ba
