--- a/composer/yamls/models/qqp.yaml
+++ b/composer/yamls/models/qqp.yaml
@@ -58,8 +58,7 @@ dataloader:
 grad_accum: 1
 precision: amp
 grad_clip_norm: None
-validate_every_n_batches: 2000
-validate_every_n_epochs: 1
+eval_interval: 2000ba
 callbacks:
   - lr_monitor: {}
 load_path: https://storage.googleapis.com/llm_checkpoints/bert_checkpoint/bert_checkpoints/ep7.pt
