--- a/composer/yamls/models/sst-2.yaml
+++ b/composer/yamls/models/sst-2.yaml
@@ -56,8 +56,7 @@ loggers:
 grad_accum: 1
 precision: amp
 grad_clip_norm: None
-validate_every_n_batches: 500
-validate_every_n_epochs: 1
+eval_interval: 500ba
 callbacks:
   - lr_monitor: {}
 load_path: https://storage.googleapis.com/llm_checkpoints/bert_checkpoint/bert_checkpoints/ep7.pt
