--- a/pretraining_data_collection_yamls/common/model.yaml
+++ b/pretraining_data_collection_yamls/common/model.yaml
@@ -82,4 +82,4 @@ parameters:
   save_folder: bert_checkpoints
   save_interval: 3500ba
   save_artifact_name: "{run_name}/checkpoints/ep{epoch}-ba{batch}-rank{rank}-{total_wct}wct"
-  run_name: "{job[run_name]}"
+  run_name: "{mcli_sweep[run_name]}"
